# zephyr-ot-clean

./: .clangd  .gitignore  .gitmodules  debug.ps1  debug_manual.ps1  pixi.toml  probe_clock_uart.ps1
.claude/: settings.local.json
.west/: config
.west_shim/: canopen.py
app/: README.md  parking_lock_system_design_plan.md
app/fan_controller/: CMakeLists.txt  README.md  WIFI_CRASH_HANDOFF_2026-04-06.md  adc_to_voltage.generated.csv  adc_to_voltage.generated.json  adc_to_voltage_ready.json  prj.conf  voltage_to_percent_3v3.json
app/fan_controller/config/: config.json  config_fields.json  ntp.json  ssh_config.json  wifi.json
app/fan_controller/config/curves/: adc_to_voltage.json  percent_to_pwm.json  percent_to_rpm.json  voltage_to_percent.json
app/fan_controller/scripts/: generate_config_assets.py  generate_default_curve_assets.py  generate_web_assets.py
app/fan_controller/src/: command_session.cpp  command_session.hpp  common.hpp  fan_controller.hpp  http_server.cpp  http_server.hpp  main.cpp  settings_store.cpp  settings_store.hpp  shell_commands.cpp  shell_commands.hpp  ssh_server.cpp  ssh_server.hpp  storage.cpp  storage.hpp  wifi_manager.cpp  wifi_manager.hpp  wolfssh_user_settings.h
app/fan_controller/src/cli/: cli_runtime.cpp  cli_runtime.hpp  command_session.cpp  command_session.hpp  htop_monitor.cpp  htop_monitor.hpp  kilo_editor.cpp  kilo_editor.hpp  line_editor.cpp  line_editor.hpp  shell_commands.cpp  shell_commands.hpp  show_status.hpp
app/fan_controller/src/core/: common.hpp  fatal_reboot.cpp  memory_domains.cpp  memory_domains.hpp  service_context.hpp
app/fan_controller/src/services/fan/: curve_profiles.cpp  curve_profiles.hpp  fan_controller.cpp  fan_controller.hpp  fan_shared_state.cpp  fan_shared_state.hpp
app/fan_controller/src/services/host_control/: host_control_manager.cpp  host_control_manager.hpp
app/fan_controller/src/services/network/: wifi_manager.cpp  wifi_manager.hpp
app/fan_controller/src/services/network/http/: http_api.cpp  http_api.hpp  http_common.cpp  http_common.hpp  http_server.cpp  http_server.hpp
app/fan_controller/src/services/ssh/: ssh_server.cpp  ssh_server.hpp  wolfssh_user_settings.h
app/fan_controller/src/services/storage/: settings_store.cpp  settings_store.hpp  storage.cpp  storage.hpp
app/fan_controller/tools/: calibrate_adc_curve.py  calibrate_adc_curve_v2.py  curve_json_to_csv.py
app/fan_controller/web/: app.js  index.html  styles.css
app/hello_world/: CMakeLists.txt
app/hello_world/src/: main.c
app/parking_lock_cloud/: README.md  run_embedded_server.py  serial_http_bridge.py  serial_mqtt_bridge.py  server.py
app/parking_lock_cloud/static/: app.js  index.html  styles.css
app/parking_lock_espwifi/32/: 32.ino
app/parking_lock_espwifi/main/: main.ino
app/parking_lock_espwifi/tests/: README.md  test_espwifi_logic.py  test_espwifi_serial.py
app/parking_lock_gateway/: CMakeLists.txt  ESP_UART_PROTOCOL.md  SCREEN_UART_PROTOCOL.md  prj.conf  screen_sim_com16.py  screen_sim_tui.py  screen_uart_hex_samples.txt
app/parking_lock_gateway/src/: main.cpp
app/parking_lock_slave/: CMakeLists.txt  com13_test.py  prj.conf
app/parking_lock_slave/src/: main.cpp
app/uart_terminal/: CMakeLists.txt  prj.conf
app/uart_terminal/src/: main.c
boards/espressif/esp32s3_fan_controller/: Kconfig  Kconfig.esp32s3_fan_controller  board.yml  esp32s3_fan_controller-partitions.dtsi  esp32s3_fan_controller-pinctrl.dtsi  esp32s3_fan_controller_procpu.dts  esp32s3_fan_controller_procpu.yaml  esp32s3_fan_controller_procpu_defconfig
boards/espressif/esp32s3_n16r8/: Kconfig  Kconfig.esp32s3_n16r8  board.yml  esp32s3_n16r8_appcpu.dts  esp32s3_n16r8_appcpu.yaml  esp32s3_n16r8_procpu.dts  esp32s3_n16r8_procpu.yaml
boards/others/stm32f103_ot_gateway/: Kconfig.stm32f103_ot_gateway  README.md  board.yml  stm32f103_ot_gateway.dts
boards/others/stm32f103_ot_sensor/: Kconfig.stm32f103_ot_sensor  README.md  board.yml  stm32f103_ot_sensor.dts  stm32f103_ot_sensor_defconfig
docs/: parking_lock_flowcharts.md  parking_lock_thesis_implementation.md  parking_lock_thesis_reference.md
notes/: walle_g_zephyr_fpga_study.md  walle_g_zephyr_porting_notes.md
tools/mqtt/: local_broker.yaml  passwords.txt  run_local_broker.py  setup_local_broker.py
